# cod

./: Cargo.toml  LICENSE.txt  README.md
examples/: bold-faint.rs  debold.rs  nested_color.rs  style.rs  with.rs
src/: clear.rs  color.rs  goto.rs  guard.rs  lib.rs  line.rs  prelude.rs  println.rs  read.rs  rect.rs  style.rs  term.rs
