[package]
name = "cod"
version = "5.0.2"
edition = "2021"

description = "A mini terminal drawing utility."
authors = ["Kyllingene"]
license = "MIT"

repository = "https://github.com/Kyllingene/cod"
homepage = "https://github.com/Kyllingene/cod"

categories = ["command-line-interface"]
keywords = ["tui", "terminal", "command-line"]

[dependencies]
console = { version = "0.15", optional = true }

[lib]
name = "cod"
path = "src/lib.rs"

[features]
input = ["dep:console"]
