[package]
name = "cod"
version = "9.0.0"
edition = "2021"

description = "A mini, functional terminal drawing utility."
authors = ["Kyllingene"]
license = "MIT"

repository = "https://github.com/Kyllingene/cod"
homepage = "https://github.com/Kyllingene/cod"

categories = ["command-line-interface"]
keywords = ["tui", "terminal", "command-line"]

[dependencies]
crossterm = { version = "0.27", optional = true }

[lib]
name = "cod"
path = "src/lib.rs"

[features]
default = ["color_stack"]
color_stack = []
crossterm = ["dep:crossterm"]
